add black to requirementswq

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
 
 install:
   - pip install --upgrade pip
-  - pip install -e . --process-dependency-link | grep 'Collecting\|Using cached\|Requirement already satisfied\| installed'
+  - pip install -e . | grep 'Collecting\|Using cached\|Requirement already satisfied\| installed'
   - pip install -r requirements-dev.txt | grep 'Collecting\|Using cached\|Requirement already satisfied\| installed'
 
 
