--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,13 @@ language: python
 python:
   - 3.6
 
+env:
+  - TORCH=torch<1.0.0
+  - TORCH=torch>=1.0.0
+
 install:
   - pip install --upgrade pip
-  - pip install -e . | grep 'Collecting\|Using cached\|Requirement already satisfied\| installed'
+  - pip install $TORCH numpy | grep 'Collecting\|Using cached\|Requirement already satisfied\| installed'
   - pip install -r requirements-dev.txt | grep 'Collecting\|Using cached\|Requirement already satisfied\| installed'
 
 
