add compat tracing

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 script:
   - black --check --diff geoopt
-  - py.test -v
+  - py.test -v --durations=0
 
 after_success:
   - coveralls
