--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,14 @@ cache:
   directories:
     - $HOME/miniconda3
 
+env:
+  - TORCH='pytorch<1.0.0'
+  - TORCH='pytorch>=1.0.0'
+  - TORCH='pytorch-nightly'
+
 matrix:
-  include:
-    - name: Build against PyTorch < 1.0.0
-      env: TORCH='pytorch<1.0.0'
-    - name: Build against PyTorch >= 1.0.0
-      env: TORCH='pytorch>=1.0.0'
   allow_failures:
-    - name: Build against nightly PyTorch (allowed to fail)
-      env: TORCH='pytorch-nightly'
+    - env: TORCH='pytorch-nightly'
 
 before_install:
   - . ./scripts/install_miniconda.sh
