--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
 
 install:
   - pip install --upgrade pip
-  - conda install -y $TORCH -c pytorch | grep -v '#'
+  - conda install -y $TORCH numpy -c pytorch | grep -v '#'
   - pip install -r requirements-dev.txt | grep 'Collecting\|Using cached\|Requirement already satisfied\| installed'
   - pip install -e . --no-deps
 
