Speed up geoopt (#15)
* change requirements

* change api

* optimize stiefel retr/transp

* more consistent api for tensor

* remove boilerplate

* coveralls

* add bage

* update readme to match docs

* bage order

* make amat private in Stiefel

* refactor optimizatin

* get reqs back

* fix travis script

* add compat tracing

* fix arguments

* torch.jit<1.0.0 does not support inplace ops

* make step work with no output

* update readme

* refactor adam

* small change for test

* ignore deps in build

* add optional build

* refactor travis build

* refactor travis yaml

* say yes to conda install

* hide conda progressbar in logs

* fix python version

* install numpy via conda

* fix version bug

* build with create test env script

* change testenv script

* tidy gitignore

* avoid batched gesv

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,31 @@
 language: python
-python:
-  - 3.6
+
+cache:
+  directories:
+    - $HOME/miniconda3
+
+env:
+  - PYTHON_VERSION=3.6 TORCH='pytorch<1.0.0'
+  - PYTHON_VERSION=3.6 TORCH='pytorch>=1.0.0'
+  - PYTHON_VERSION=3.6 TORCH='pytorch-nightly'
+
+matrix:
+  allow_failures:
+    - env: PYTHON_VERSION=3.6 TORCH='pytorch-nightly'
+
+before_install:
+  - . ./scripts/install_miniconda.sh
 
 install:
-  - pip install --upgrade pip
-  - pip install -e . | grep 'Collecting\|Using cached\|Requirement already satisfied\| installed'
-  - pip install -r requirements-dev.txt | grep 'Collecting\|Using cached\|Requirement already satisfied\| installed'
-
+  - . ./scripts/create_testenv.sh
+  - conda install --yes numpy mkl-service
+  - conda install --yes $TORCH -c pytorch
+  - pip install -r requirements-dev.txt
+  - pip install -e . --no-deps
 
 script:
   - black --check --diff geoopt
-  - py.test -v
+  - py.test -v --durations=0
+
+after_success:
+  - coveralls
