--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
   - conda install --yes numpy mkl-service
   - conda install --yes $TORCH -c pytorch
   - pip install -r requirements-dev.txt
+  - pip install travis-sphinx
   - pip install -e . --no-deps
 
 script:
