--- a/scripts/Dockerfile
+++ b/scripts/Dockerfile
@@ -1,16 +1,24 @@
 FROM conda/miniconda3
 
 MAINTAINER Maxim Kochurov <maxim.v.kochurov@gmail.com>
+# source files for geoopt
 ARG SRC_DIR
-ARG PYTORCH
-ENV PYTORCH=${PYTORCH}
-COPY $SRC_DIR/scripts/create_testenv.sh /opt/geoopt/create_testenv.sh
+# pytorch version
+ARG PYTORCH=pytorch
+# python version
+ARG PYTHON_VERSION=3.6
+# additional requirements
 COPY $SRC_DIR/requirements-dev.txt /opt/geoopt/requirements-dev.txt
-COPY $SRC_DIR/scripts/create_testenv.sh /opt/geoopt/scripts/create_testenv.sh
-
+# install most of the things using conda
+# start with python version and numpy with mkl support, then the rest
+RUN conda install --yes python=${PYTHON_VERSION} pip numpy mkl-service && \
+    conda install --yes ${PYTORCH} -c pytorch && \
+    pip install -r /opt/geoopt/requirements-dev.txt
+# set source dir as working dir
 WORKDIR /opt/geoopt
-RUN ./scripts/create_testenv.sh
+# copy sorces from local machine
 COPY $SRC_DIR /opt/geoopt
+# install the package ignoring deps in setup.py
 RUN pip install --no-deps -e .
+# local copy version is dirty, clean __pycache__ files to avoid weird errors
 RUN find -type d -name __pycache__ -exec rm -rf {} +
-# Set automatic conda activation in non interactive and shells
