--- a/.travis.yml
+++ b/.travis.yml
@@ -15,17 +15,17 @@ before_install:
   - docker --version
 
 install:
-  - . ./scripts/container.sh --build
+  - make docker
   # Print conda details
   - docker run --rm geoopt:latest bash -c "conda info -a"
   # Print conda environment details
   - docker run --rm geoopt:latest bash -c "conda list && pip freeze"
   # install coverage if needed
-  - if [[ $COVERAGE ]]; then pip install coveralls black; fi
+  - if [[ $COVERAGE ]]; then pip install -r requirements-dev.txt; fi
 
 script:
-  - if [[ $COVERAGE ]]; then black --check --diff geoopt tests; fi
-  - ./scripts/container.sh --test
+  - if [[ $COVERAGE ]]; then make lint; fi
+  - make docker-test
 
 after_success:
   - echo $(pwd)
