add additional testing utils including pydoctest/pydocstyle/pylint (#90)
* add linters, doctest util but no pydocstyle yet to check travis works

* add setup.cfg

* fix script for travis

* fix typo

* try a fi

* add common tools to docker

* mount .coverage only

* correct mount

* coverage generates locally

* add docstyle to test

* rename Makefile funcitons

* make linters happy

* fix typo

* update changelog & fix small typo

--- a/.gitignore
+++ b/.gitignore
@@ -104,10 +104,10 @@ venv.bak/
 .mypy_cache/
 .idea/
 *.cfg
+!setup.cfg
 exman
 .tests
-Makefile
-!docs/Makefile
 cfg/
 data/
 notebooks/
+testing-report.html
