--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
     - "3.6"
 
 env:
-  - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch' COVERAGE='--cov geoopt'
+  - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch==1.3.0' COVERAGE='--cov geoopt'
+  - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch==1.2.0' COVERAGE=''
   - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch-nightly' COVERAGE=''
 
 matrix:
