--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
         - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/miniconda.sh
         - bash $HOME/miniconda.sh -b -p $HOME/miniconda
         - export PATH="$HOME/miniconda/bin:$PATH"
+        - conda init
         - conda create --yes -n test python=3.6 pip wheel
         - conda activate test
     - os: linux
@@ -22,6 +23,7 @@ matrix:
         - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/miniconda.sh
         - bash $HOME/miniconda.sh -b -p $HOME/miniconda
         - export PATH="$HOME/miniconda/bin:$PATH"
+        - conda init
         - conda create --yes -n test python=3.7 pip wheel
         - conda activate test
     - os: osx
@@ -33,6 +35,7 @@ matrix:
         - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O $HOME/miniconda.sh
         - bash $HOME/miniconda.sh -b -p $HOME/miniconda
         - export PATH="$HOME/miniconda/bin:$PATH"
+        - conda init
         - conda create --yes -n test python=3.6 pip wheel
         - conda activate test
     - os: osx
@@ -44,6 +47,7 @@ matrix:
         - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O $HOME/miniconda.sh
         - bash $HOME/miniconda.sh -b -p $HOME/miniconda
         - export PATH="$HOME/miniconda/bin:$PATH"
+        - conda init
         - conda create --yes -n test python=3.7 pip wheel
         - conda activate test
     - os: windows
@@ -53,6 +57,7 @@ matrix:
       before_install:
         - choco install python3 --params "/InstallDir:C:\\Python"
         - export PATH="/c/Python:/c/Python/Scripts:$PATH"
+        - conda init
         - conda create --yes -n test python=3.6 pip wheel
         - conda activate test
     - os: windows
@@ -62,6 +67,7 @@ matrix:
       before_install:
         - choco install python3 --params "/InstallDir:C:\\Python"
         - export PATH="/c/Python:/c/Python/Scripts:$PATH"
+        - conda init
         - conda create --yes -n test python=3.7 pip wheel
         - conda activate test
 install:
