https://github.com/kangwonlee/travis-yml-conda-posix-nt

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,78 +1,27 @@
-matrix:
-  include:
-    - os: linux
-      dist: bionic
-      language: sh
-      python:
-        - "3.6"
-      # Perform the manual steps on Linux to install python3 and activate venv
-      before_install:
-        - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/miniconda.sh
-        - bash $HOME/miniconda.sh -b -p $HOME/miniconda
-        - export PATH="$HOME/miniconda/bin:$PATH"
-        - conda init
-        - conda create --yes -n test python=3.6 pip wheel
-        - conda activate test
-    - os: linux
-      dist: bionic
-      language: sh
-      python:
-        - "3.7"
-      # Perform the manual steps on Linux to install python3 and activate venv
-      before_install:
-        - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O $HOME/miniconda.sh
-        - bash $HOME/miniconda.sh -b -p $HOME/miniconda
-        - export PATH="$HOME/miniconda/bin:$PATH"
-        - conda init
-        - conda create --yes -n test python=3.7 pip wheel
-        - conda activate test
-    - os: osx
-      language: sh
-      python:
-        - "3.6"
-      # Perform the manual steps on osx to install python3 and activate venv
-      before_install:
-        - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O $HOME/miniconda.sh
-        - bash $HOME/miniconda.sh -b -p $HOME/miniconda
-        - export PATH="$HOME/miniconda/bin:$PATH"
-        - conda init
-        - conda create --yes -n test python=3.6 pip wheel
-        - conda activate test
-    - os: osx
-      language: sh
-      python:
-        - "3.7"
-      # Perform the manual steps on osx to install python3 and activate venv
-      before_install:
-        - wget https://repo.anaconda.com/miniconda/Miniconda3-latest-MacOSX-x86_64.sh -O $HOME/miniconda.sh
-        - bash $HOME/miniconda.sh -b -p $HOME/miniconda
-        - export PATH="$HOME/miniconda/bin:$PATH"
-        - conda init
-        - conda create --yes -n test python=3.7 pip wheel
-        - conda activate test
-    - os: windows
-      language: sh
-      python:
-        - "3.6"
-      before_install:
-        - choco install python3 --params "/InstallDir:C:\\Python"
-        - export PATH="/c/Python:/c/Python/Scripts:$PATH"
-        - conda init
-        - conda create --yes -n test python=3.6 pip wheel
-        - conda activate test
-    - os: windows
-      language: sh
-      python:
-        - "3.7"
-      before_install:
-        - choco install python3 --params "/InstallDir:C:\\Python"
-        - export PATH="/c/Python:/c/Python/Scripts:$PATH"
-        - conda init
-        - conda create --yes -n test python=3.7 pip wheel
-        - conda activate test
+# ref : Anaconda Inc., Using conda with Travis CI, Conda documentation, https://conda.io/docs/user-guide/tasks/use-conda-with-travis-ci.html
+#       CodeChat, .travis.yml - Travis CI configuration, https://pythonhosted.org/CodeChat/.travis.yml.html
+#       Travis CI, Python example (unsupported languages), https://docs.travis-ci.com/user/multi-os/#python-example-unsupported-languages
+#       Kalderimis & Nagy, Windows is Available (Early Release), Oct 10 2018, https://blog.travis-ci.com/2018-10-11-windows-early-release
+#       Miniconda (Python 3) 4.5.11, Chocolatey Gallery, https://chocolatey.org/packages/miniconda3
+#       The Windows Build Environment, https://docs.travis-ci.com/user/reference/windows/
+#       Minimal .travis.yml file to run the current Python 3.7 on Linux, macOS, and Windows, https://github.com/cclauss/Travis-CI-Python-on-three-OSes
+
+language : shell
+
+env:
+  - CONDA_PYTHON=3.6
+  - CONDA_PYTHON=3.7
+
+os:
+  - linux
+  - windows
+  - osx
+
+before_install:
+  - source ./tests/before_install_nix_win.sh
+
 install:
-  # Get newer pip and wheel for binary caching support
-  - pip install --upgrade pip wheel
-  - pip install -U -r requirements-dev.txt
-  - pip install -e .
-  - echo "hurray"
+  - source ./tests/install_nix_win.sh
+
+script:
+  - conda --version && python --version && pip --version;
