--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ install:
   - source ./scripts/install_nix_win.sh
   - source ./scripts/install_deps.sh
   - python setup.py develop --no-deps
+  - if [[ $COVERAGE ]]; then pip install -r requirements-dev.txt; fi
 
 script:
-  - conda --version && python --version && pip --version;
+  - conda --version && python --version && pip --version && python -c 'import torch; print("torch", torch.__version__)'
+  - make lint && pytest -v geoopt tests --durations=0 --doctest-modules ${COVERAGE}
