--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,43 @@
-language: python
-python:
-    - "3.6"
+# ref : Anaconda Inc., Using conda with Travis CI, Conda documentation, https://conda.io/docs/user-guide/tasks/use-conda-with-travis-ci.html
+#       CodeChat, .travis.yml - Travis CI configuration, https://pythonhosted.org/CodeChat/.travis.yml.html
+#       Travis CI, Python example (unsupported languages), https://docs.travis-ci.com/user/multi-os/#python-example-unsupported-languages
+#       Kalderimis & Nagy, Windows is Available (Early Release), Oct 10 2018, https://blog.travis-ci.com/2018-10-11-windows-early-release
+#       Miniconda (Python 3) 4.5.11, Chocolatey Gallery, https://chocolatey.org/packages/miniconda3
+#       The Windows Build Environment, https://docs.travis-ci.com/user/reference/windows/
+#       Minimal .travis.yml file to run the current Python 3.7 on Linux, macOS, and Windows, https://github.com/cclauss/Travis-CI-Python-on-three-OSes
+
+language : shell
 
 env:
-  - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.3.1' COVERAGE='--cov geoopt'
+  - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.4.0' COVERAGE='--cov geoopt'
+  - PYTHON_VERSION=3.7 PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.4.0' COVERAGE=''
+  - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.3.1' COVERAGE=''
   - PYTHON_VERSION=3.7 PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.3.1' COVERAGE=''
-  - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.2.0' COVERAGE=''
-  - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch-nightly' PYTORCH_VERSION='' COVERAGE=''
+  - PYTHON_VERSION=3.7 PYTORCH_CHANNEL='pytorch-nightly' PYTORCH_VERSION='' COVERAGE=''
 
 matrix:
   allow_failures:
-    - env: PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch-nightly' PYTORCH_VERSION='' COVERAGE=''
+    - env: PYTHON_VERSION=3.7 PYTORCH_CHANNEL='pytorch-nightly' PYTORCH_VERSION='' COVERAGE=''
+
+os:
+  - linux
+  - windows
+  - osx
 
 before_install:
-  - docker pull conda/miniconda3
-  - docker --version
+  - source ./scripts/before_install_nix_win.sh
 
 install:
-  - make docker
-  # Print conda details
-  - docker run --rm geoopt:latest bash -c "conda info -a"
-  # Print conda environment details
-  - docker run --rm geoopt:latest bash -c "conda list && pip freeze"
-  # install coverage if needed
-  - if [[ $COVERAGE ]]; then pip install -r requirements-dev.txt; fi
+  - source ./scripts/install_nix_win.sh
+  - source ./scripts/install_deps.sh
+  - python setup.py develop --no-deps
 
 script:
-  - make docker-test
+  - conda --version && python --version && pip --version && python -c 'import torch; print("torch", torch.__version__)'
+  - black --check --diff geoopt tests
+  - pylint geoopt
+  - pydocstyle geoopt
+  - pytest -v geoopt tests --durations=0 --doctest-modules ${COVERAGE}
 
 after_success:
   - echo $(pwd)
