fix API warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,8 @@
 # due to bug in black: https://github.com/ambv/black/issues/355
 add-ignore = D100,D101,D102,D103,D104,D105,D106,D107,D202
 convention = numpy
+
+[tool:pytest]
+filterwarnings =
+    error
+    default::RuntimeWarning
