--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,10 +16,10 @@ jobs:
       matrix:
         python-version: [3.7]
         env:
-          - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.7.1' COVERAGE='--cov geoopt'
-          - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.6.0' COVERAGE=''
-          - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.5.1' COVERAGE=''
-          - PYTHON_VERSION=3.6 PYTORCH_CHANNEL='pytorch-nightly' PYTORCH_VERSION='' COVERAGE=''
+          - PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.7.1' COVERAGE='--cov geoopt'
+          - PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.6.0' COVERAGE=''
+          - PYTORCH_CHANNEL='pytorch' PYTORCH_VERSION='=1.5.1' COVERAGE=''
+          - PYTORCH_CHANNEL='pytorch-nightly' PYTORCH_VERSION='' COVERAGE=''
 
     steps:
     - uses: actions/checkout@v2
