--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,11 +26,11 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v2
       with:
         auto-update-conda: true
-        auto-activate-base: true
         python-version: ${{ matrix.python-version }}
     - name: Install deps with conda
       run: |
         export ${{ matrix.env }}
+        conda activate test
         conda install --yes numpy mkl-service
         conda install --yes pytorch${PYTORCH_VERSION} cpuonly -c ${PYTORCH_CHANNEL}
         conda install --yes --file requirements-dev.txt
