--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -29,6 +29,7 @@ jobs:
         auto-activate-base: true
         python-version: ${{ matrix.python-version }}
     - name: Install deps with conda
+      shell: bash -l {0}
       run: |
         export ${{ matrix.env }}
         conda install --yes numpy mkl-service
