--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,6 +27,7 @@ jobs:
       with:
         auto-update-conda: true
         auto-activate-base: true
+        channels: conda-forge
         python-version: ${{ matrix.python-version }}
     - name: Install deps with conda
       shell: bash -l {0}
