--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -48,10 +48,13 @@ jobs:
     - name: Run Tests
       shell: bash -l {0}
       run: |
+        export ${{ matrix.env }}
         pytest -v geoopt tests --durations=0 --doctest-modules ${COVERAGE}
     - name: Coverage
       shell: bash -l {0}
-      run: if [[ $COVERAGE ]]; then coveralls; fi
+      run: |
+        export ${{ matrix.env }}
+        if [[ $COVERAGE ]]; then coveralls; fi
         
       
     
