--- a/.pylintrc
+++ b/.pylintrc
@@ -1,4 +1,6 @@
 [MASTER]
+init-hook="from pylint.config import find_pylintrc;
+import os, sys; sys.path.append(os.path.dirname(find_pylintrc()))"
 # Use multiple processes to speed up Pylint.
 jobs=1
 
