--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -51,7 +51,7 @@ jobs:
         export ${{ matrix.env }}
         pytest -v geoopt tests --durations=0 --doctest-modules --cov geoopt
     - name: Coveralls
-      uses: coverallsapp/github-action@master
+      uses: coverallsapp/github-action@v1.1.2
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         flag-name: run-${PYTORCH_CHANNEL}-${PYTORCH_VERSION}
