add codecov action

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -49,19 +49,9 @@ jobs:
       shell: bash -l {0}
       run: |
         export ${{ matrix.env }}
-        pytest -v geoopt tests --durations=0 --doctest-modules --cov geoopt
+        pytest -v geoopt tests --durations=0 --doctest-modules --cov geoopt --cov-report=xml --cov-report term 
     - name: Coveralls
-      uses: AndreMiras/coveralls-python-action@develop
+      uses: codecov/codecov-action@v1
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        flag-name: run-${PYTORCH_CHANNEL}-${PYTORCH_VERSION}
-        parallel: true
-  finish:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-    - name: Coveralls GitHub Action
-      uses: AndreMiras/coveralls-python-action@develop
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        parallel-finished: true
+        github-token: ${{ secrets.CODECOV_TOKEN }}
+        env_vars: PYTORCH_VERSION
